# npp-papyrus

./: .gitignore  .gitmodules  Configuration.md  Installation.md  PapyrusPlugin.sln  README.md  UpgradeLog.htm
.github/: dependabot.yml
.github/workflows/: build.yml  codeql-analysis.yml  msvc-analysis.yml  release.yml
src/: CMakeLists.txt  DllMain.cpp  Exports.def  PapyrusPlugin.vcxproj  PapyrusPlugin.vcxproj.filters
src/Plugin/: Plugin.cpp  Plugin.hpp  PluginDefinition.cpp  Resources.rc
src/Plugin/Common/: DateTimeUtil.cpp  DateTimeUtil.hpp  EnumUtil.hpp  FileSystemUtil.hpp  FinalAction.hpp  Game.cpp  Game.hpp  Logger.cpp  Logger.hpp  NotepadPlusPlus.cpp  NotepadPlusPlus.hpp  PrimitiveTypeValueMonitor.hpp  Resources.hpp  StringUtil.cpp  StringUtil.hpp  Timer.cpp  Timer.hpp  Topic.hpp  Utility.cpp  Utility.hpp  Version.cpp  Version.hpp
src/Plugin/CompilationErrorHandling/: Error.hpp  ErrorAnnotator.cpp  ErrorAnnotator.hpp  ErrorAnnotatorSettings.hpp  ErrorsWindow.cpp  ErrorsWindow.hpp
src/Plugin/Compiler/: CompilationRequest.hpp  Compiler.cpp  Compiler.hpp  CompilerMessages.hpp  CompilerSettings.cpp  CompilerSettings.hpp
src/Plugin/KeywordMatcher/: KeywordMatcher.cpp  KeywordMatcher.hpp  KeywordMatcherSettings.hpp
src/Plugin/Lexer/: Lexer.cpp  Lexer.hpp  LexerData.hpp  LexerDefinition.cpp  LexerIDs.hpp  LexerSettings.hpp  SimpleLexerBase.cpp  SimpleLexerBase.hpp
src/Plugin/Settings/: Settings.cpp  Settings.hpp  SettingsDialog.cpp  SettingsDialog.hpp  SettingsStorage.cpp  SettingsStorage.hpp
src/Plugin/UI/: AboutDialog.cpp  AboutDialog.hpp  DialogBase.cpp  DialogBase.hpp  MultiTabbedDialog.cpp  MultiTabbedDialog.hpp  UIParameters.hpp
